--- a/indice.html
+++ b/indice.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>display Grid</title>
+    <style>
+        *{ 
+          padding: 0;
+          margin: 0;
+
+        }
+        body{   
+            background-color: rgb(0, 134, 243);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .produtos{
+            position: relative;
+            width: 100%;
+            padding: 20px;
+            color: #8f00ee;
+        }
+        .produtos h1{
+            text-align: center;
+            margin: 1em;
+            
+
+        }
+    </style>
 </head>
 <body>
     <div classe="produtos">
